UI polish for auth screen

--- a/web/index.html
+++ b/web/index.html
@@ -18,12 +18,14 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Link Up Calendar">
+  <meta name="google-signin-client_id" content="548043523282-me4uvkods084rm9l7gplk75ui6d9lr1q.apps.googleusercontent.com">
+
 
   <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="shared_calendar">
+  <meta name="mobile-web-app-capable" content="Link Up Calendar">
+  <meta name="apple-mobile-web-app-status-bar-style" content="Link Up Calendar">
+  <meta name="apple-mobile-web-app-title" content="Link Up Calendar">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
